# PocoServer

./: CMakeLists.txt  ClientRequest.cpp  ClientRequest.h  DBconnection.cpp  DBconnection.h  RSAKeys.h  ServerConnection.cpp  ServerConnection.h  TCPClientConnectionFactory.cpp  TCPClientConnectionFactory.h  Utils.cpp  Utils.h  main.cpp
Helper/: Crypto.cpp  Crypto.h  Singleton.cpp  Singleton.h  StringHelper.cpp  StringHelper.h
Helper/OTP/: OTPAuthRequest.cpp  OTPAuthRequest.h  OTPBase.cpp  OTPBase.h  OTPGenerationRequest.cpp  OTPGenerationRequest.h
Requests/: CommunityRequest.cpp  CommunityRequest.h  EnterpriseRequest.cpp  EnterpriseRequest.h  RegistrationBehavior.cpp  RequestBehaviour.h  RequestInterface.h
Requests/Behaviours/: BehaviourContainer.cpp  BehaviourContainer.h  ConferenceBehaviourEnterprise.cpp  ConferenceBehaviourEnterprise.h  RegistrationBehavior.cpp  RegistrationBehavior.h  RegistrationBehaviourCommunity.cpp  RegistrationBehaviourCommunity.h  RegistrationBehaviourEnterprise.cpp  RegistrationBehaviourEnterprise.h  RequestBehaviour.cpp  VerificationBehaviour.cpp  VerificationBehaviour.h  VerificationBehaviourCommunity.cpp  VerificationBehaviourCommunity.h
Requests/Behaviours/Community/: BehaviourContainerCOMM.cpp  BehaviourContainerCOMM.h  RegistrationBehaviourCOMM.cpp  RegistrationBehaviourCOMM.h  VerificationBehaviourCOMM.cpp  VerificationBehaviourCOMM.h
Requests/Behaviours/Enterprise/: BehaviourContainerENT.cpp  BehaviourContainerENT.h  ConferenceBehaviourENT.cpp  ConferenceBehaviourENT.h  RegistrationBehaviourENT.cpp  RegistrationBehaviourENT.h  VerificationBehaviourENT.cpp  VerificationBehaviourENT.h
Requests/RequestState/: InitalState.cpp  InitalState.h  LoginState.cpp  LoginState.h  RegistrationState.cpp  RegistrationState.h  Singeleton.cpp  Singeleton.h  State.cpp  State.h  VerificationState.cpp  VerificationState.h
UserStructure/: CommunityUser.cpp  CommunityUser.h  EnterpriseUser.cpp  EnterpriseUser.h  User-odb.cxx  User-odb.hxx  User-odb.ixx  User.cpp  User.h  User.hxx
